@@ -1,13 +1,14 @@
 package pl.lodz.p.it.eduvirt.controller;
 
-import jakarta.transaction.Transactional;
-import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 import pl.lodz.p.it.eduvirt.aspect.logging.LoggerInterceptor;
 import pl.lodz.p.it.eduvirt.dto.team.CreateTeamDto;
 import pl.lodz.p.it.eduvirt.dto.team.TeamDto;
+import pl.lodz.p.it.eduvirt.dto.team.TeamWithCourseDto;
+import pl.lodz.p.it.eduvirt.dto.team.UpdateTeamDto;
 import pl.lodz.p.it.eduvirt.entity.Team;
 import pl.lodz.p.it.eduvirt.mappers.TeamMapper;
 import pl.lodz.p.it.eduvirt.service.TeamService;
@@ -18,7 +19,7 @@ import java.util.stream.Collectors;
 
 @RestController
 @LoggerInterceptor
-@RequestMapping("/api/v1/teams")
+@RequestMapping("/teams")
 @RequiredArgsConstructor
 public class TeamController {
 
@@ -26,51 +27,69 @@ public class TeamController {
     private final TeamMapper teamMapper;
 
     @PostMapping
-    public ResponseEntity<TeamDto> createTeam(@Valid @RequestBody CreateTeamDto createTeamDto) {
-        Team team = teamMapper.toEntity(createTeamDto);
-        Team createdTeam = teamService.createTeam(team, createTeamDto.getCourseId());
-        return ResponseEntity.ok(teamMapper.toDto(createdTeam));
+    public ResponseEntity<TeamWithCourseDto> createTeam(@RequestBody CreateTeamDto createTeamDto) {
+        Team team = teamMapper.fromCreateDto(createTeamDto);
+        Team createdTeam = teamService.createTeam(team, createTeamDto.getCourseId(), createTeamDto.getKeyValue());
+        return ResponseEntity.ok(teamMapper.teamToTeamWithCourseDto(createdTeam));
     }
 
     @GetMapping
-    @Transactional
-    public ResponseEntity<List<TeamDto>> getTeams() {
-        List<Team> teams = teamService.getTeams();
-        List<TeamDto> teamDtos = teams.stream()
-                .map(teamMapper::toDto)
+    public ResponseEntity<List<TeamWithCourseDto>> getTeams() {
+        List<Team> teams = teamService.getAllTeams();
+        List<TeamWithCourseDto> teamWithCourseDtos = teams.stream()
+                .map(teamMapper::teamToTeamWithCourseDto)
                 .collect(Collectors.toList());
-        return ResponseEntity.ok(teamDtos);
+        return ResponseEntity.ok(teamWithCourseDtos);
     }
 
     @GetMapping("/{teamId}")
-    @Transactional
-    public ResponseEntity<TeamDto> getTeam(@PathVariable UUID teamId) {
-        Team team = teamService.getTeam(teamId);
-        return ResponseEntity.ok(teamMapper.toDto(team));
+    public ResponseEntity<TeamWithCourseDto> getTeamDetails(@PathVariable UUID teamId) {
+        Team team = teamService.getTeamById(teamId);
+        return ResponseEntity.ok(teamMapper.teamToTeamWithCourseDto(team));
     }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<TeamWithCourseDto> updateTeam(@PathVariable UUID id, @RequestBody UpdateTeamDto updateTeamDto) {
+        Team team = teamMapper.fromUpdateDto(updateTeamDto);
+        Team updatedTeam = teamService.updateTeam(team, id);
+        return ResponseEntity.ok(teamMapper.teamToTeamWithCourseDto(updatedTeam));
+    }
+
 
     @GetMapping("/user/{userId}")
     @Transactional
-    public ResponseEntity<List<TeamDto>> getTeamsByUser(@PathVariable UUID userId) {
+    public ResponseEntity<List<TeamWithCourseDto>> getTeamsByUser(@PathVariable UUID userId) {
         List<Team> teams = teamService.getTeamsByUser(userId);
-        List<TeamDto> teamDtos = teams.stream()
-                .map(teamMapper::toDto)
+        List<TeamWithCourseDto> teamWithCourseDtos = teams.stream()
+                .map(teamMapper::teamToTeamWithCourseDto)
                 .collect(Collectors.toList());
-        return ResponseEntity.ok(teamDtos);
+        return ResponseEntity.ok(teamWithCourseDtos);
     }
 
     @GetMapping("/course/{courseId}")
     public ResponseEntity<List<TeamDto>> getTeamsByCourse(@PathVariable UUID courseId) {
         List<Team> teams = teamService.getTeamsByCourse(courseId);
         List<TeamDto> teamDtos = teams.stream()
-                .map(teamMapper::toDto)
-                .collect(Collectors.toList());
+                .map(teamMapper::teamToTeamDto)
+                .toList();
         return ResponseEntity.ok(teamDtos);
     }
 
-    @PostMapping("/join/{key}")
-    public ResponseEntity<TeamDto> joinTeam(@PathVariable String key, @RequestParam UUID userId) {
-        Team team = teamService.joinTeamOrCreate(key, userId);
-        return ResponseEntity.ok(teamMapper.toDto(team));
+    //TODO: make it so it takes the user from the context
+    @PostMapping("/join")
+    public ResponseEntity<Void> joinUsingKey(@RequestParam String keyValue, @RequestParam UUID userId) {
+        if (keyValue == null || keyValue.isEmpty()) {
+            throw new IllegalArgumentException("Key value cannot be empty");
+        }
+        teamService.joinUsingKey(keyValue, userId);
+        return ResponseEntity.noContent().build();
     }
+
+    //TODO: make it so it takes the user from the context
+    @PostMapping("/leave")
+    public ResponseEntity<Void> leaveTeam(@RequestParam UUID teamId, @RequestParam UUID userId) {
+        teamService.removeUserFromTeam(teamId, userId);
+        return ResponseEntity.noContent().build();
+    }
+
 }
